.section-heading fixed on mobile phones

--- a/music/pages/gallery/gallery.css
+++ b/music/pages/gallery/gallery.css
@@ -86,7 +86,7 @@ noscript p {
     font-size: 1.7rem;
     font-family: var(--heading-font);
     width: 100%;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 #album_section {
